--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
   <div class="speed">
     <img src="disk.gif" class="gif">
     <br>
-    <h3 class="speed_value btn btn-danger">Speed</h3>
+    <h3 class="btn btn-danger" id="speed_value">Speed</h3>
     </div>
 
     <div class="volume">
       <img src="disk.gif" class="gif">
       <br>
-      <h3 class="volume_value btn btn-danger">Volume</h3>
+      <h3 class="btn btn-danger" id="volume_value">Volume</h3>
       </div>
 
       <button onclick="play();" class="btn btn-success playBtn">Play</button>
